# shuairan

./: Cargo.toml  README.md
docs/: desin.md  direct-kernel-boot.md  vm-depiction.md  vm-discription.md
resources/: vm-example.json
src/interface/: Cargo.toml
src/interface/src/: main.rs
src/shuairan/: Cargo.toml
src/shuairan/src/: main.rs
src/utils/: Cargo.toml
src/utils/src/: json.rs  lib.rs  log.rs
src/vmm/: Cargo.toml
src/vmm/src/: config.rs  error.rs  lib.rs  main.rs  vcpu.rs  vm.rs
