[package]
name = "vmm"
version = "0.1.0"
edition = "2021"
authors = ["Garry Xu <garry.x@outlook.com>"]
license = "Apache-2.0"

[dependencies]
utils = { path = "../utils" } 
kvm-ioctls = "0.11.0"
vm-memory = { version = "0.9.0", features = ["backend-mmap"] }
linux-loader = "0.6.0"
kvm-bindings = "0.5.0"